Adiciona requisito numero 5 e linka site da trybe a logotipo no titulo

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
       <div id="cabecalho">
-        <h1 id="titulo">LESSONS LEARNED PROJECT</h1>
+        <h1 id="titulo">Lições Aprendidas na <a href="https://app.betrybe.com/course/fundamentals/unix/unix-part-1" target="_blank"><img id="trybe_logo" src="trybe.png" alt="imagem da logotipo da Trybe"></a></h1>
       </div>
       <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">
-      <div id="licoes_aprendidas">
-          <ol>
+        <section>
+          <ol id="licoes_aprendidas">
               <li>avffb</li>
               <li>dhfud</li>
               <li>frf</li>
@@ -23,6 +23,18 @@
               <li>efe</li>
               <li>edef</li>
           </ol>
-      </div>
+          <ul id="licoes_a_aprender">
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+              <li>fhuhfud</li>
+          </ul>
+        </section>
     </body>
 </html>
