--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </header>
         <nav>
           <section id="main">
-            <img id="minha_foto" src="perfil_felipe_shcolnik.jpg" alt="foto_Felipe_Shcolnik" size="200px">
+            <img id="minha_foto" src="perfil_felipe_shcolnik.jpg" alt="foto_Felipe_Shcolnik">
             
             <section id="listas">
               <h4>Lições aprendidas</h4>
@@ -43,7 +43,7 @@
               
             </section>
 
-            <article>
+            <article id="artigo_principal">
               <h4>Processo de aprendizado na <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao_2&utm_content=anuncio01&gclid=EAIaIQobChMIkv-L1Ymc7QIVUweRCh2ItQcGEAAYASAAEgKLUPD_BwE" target="blank">Trybe</a></h4>
               <p>Os desafios comecaram logo que tive que instalar o Linux na minha máquina. Ainda faltava uma semana para o inicio do curso, porém nao havia ninguem para me ajudar até entao. Nao dava tempo para se lamentar, entao entrei de cabeca na missao.</p>
               <p>Foram inumeros problemas. Alguns ainda nao solucionados como a recuperacao dos meus arquivos de backup do Windows.</p>
