--- a/index.html
+++ b/index.html
@@ -7,5 +7,56 @@
     <title>Lessons Learned</title>
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lessons Learned</h1>
+
+    </header> 
+    <img id="minha_foto" src="Frederico Canoeira.JPG" alt="Foto de Frederico Canoeira">
+    <section>
+        <h4>Lições</h4>
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Inteligencia emocional</li>
+        <li>Empatia</li>
+        <li>Inspect</li>
+        <li>Colaboração</li>
+        <li>Semantic HTML</li>
+        
+    </ol>
+
+    <h4>Lições</h4>
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+        
+    </ul>
+    </section>
+
+    <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum totam pariatur quisquam dicta dolor ipsa laudantium in facilis dolorum temporibus! Nisi ullam provident blanditiis nostrum asperiores natus distinctio recusandae rerum?</p>
+
+    </article>
+
+    <aside>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
+        </p>
+    </aside>
+
+    <footer id="rodape" >
+        <a href="https://github.com/">GitHub</a>
+    </footer>
 </body>
 </html>
