Adicionado oitavo requisito

--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Copse&display=swap" rel="stylesheet">
     <title>Document</title>
+
 </head>
+
 <body>
+
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas na Trybe</h1>
+        <section>
+            <h1 id="titulo">Lições aprendidas na Trybe</h1>
+        </section>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
+    </nav>
+
     <section>
         <img id="minha_foto" src="foto-caio.jpg" alt="Minha foto">
-        <a href="https://github.com/caio300" target="_blank">Caio Queiroz</a>
+        <a href="https://github.com/caio300" target="_blank">GitHub</a>
     </section>
     
     <h2>Lições Aprendidas:</h2>
@@ -30,8 +44,9 @@
         <li>Inspect</li>
         <li>Semantic HTML</li>
     </ul>
+
     <h2>Lições que desejo aprender:</h2>
-    <ul id="licoes_a_aprender">
+    <ol id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
         <li>Forms</li>
@@ -42,7 +57,23 @@
         <li>React</li>
         <li>Node</li>
         <li>SQL</li>
-    </ul>
+    </ol>
+    <article>
+        <p>
+            Estou estudando na Trybe a quase um mês e tenho notado que estou aprendendo muito.
+            Começamos a aprender como estruturar todas as ferramentas para desenvolver de forma
+            mais eficiente. Após estruturar todas ferramentas, conhecemos as funcionalidades do shell
+            e git, entendemos como a internete funciona e seus protocolos acesso, aprendemos a fazer pesquisas
+            de forma mais eficiente, para que possamos encontrar resultados mais rápido e seguros. 
+            Só então começamos realmente a "codar", aprendendo html e css. 
+        </p>
+            Nesta página web estou passando todos os meus conhecimentos adiquidos durante esta etapa. Está sendo 
+            um grande desafio, porém estou tendo todo o apoio da Trybe com suas aulas e plantões. Estou muito feliz
+            por ter concretizado essa etapa e também muito animado para os próximos desafios, então VQV  !
+        <p>
+
+        </p>
+    </article>
     <footer id="rodape"></footer>
 </body>
 </html>
