--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
   <title>Projeto 01 | Lições aprendidas</title>
 </head>
 <body>
@@ -57,20 +59,15 @@
   <article id="meu_aprendizado">
     <section>
       <h3>Experiências</h3>
-      <p>Este é o primeiro projeto que faço, como aluno da Trybe e estou muito feliz com o resultado, até agora.
-        Para realização dessa atividade, foi necessário aprender conceitos básicos de Unix & Bash, Internet, Git & GitHub, HTML Semântico e CSS.
-        Exercendo o método de ensino proposto pela Trybe, pude aprimorar, não apenas minhas habilidades técnicas, mas também posso afirmar: estou <strong>aprendendo</strong> a aprender.
-        Sinto que evoluí <strong>bastante</strong> desde o meu primeiro dia e estou mais do que preparado para seguir adiante!</p>
+      <p>Este é o primeiro projeto que faço, como aluno da Trybe e estou muito feliz com o resultado, até agora. Para realização dessa atividade, foi necessário aprender conceitos básicos de Unix & Bash, Internet, Git & GitHub, HTML Semântico e CSS. Exercendo o método de ensino proposto pela Trybe, pude aprimorar, não apenas minhas habilidades técnicas, mas também posso afirmar: estou <strong>aprendendo</strong> a aprender. Sinto que evoluí <strong>bastante</strong> desde o meu primeiro dia e estou mais do que preparado para seguir adiante!</p>
     </section>
   </article>
 
   <aside id="passagem_de_aprendizado">
     <section>
       <h3>A estrada até agora</h3>
-      <p>Parece que o curso começou ontem e o primeiro projeto já está <strong>PRONTO!</strong> 
-        Não foi fácil, deixamos alguns pratos caírem, mas nós conseguimos. 
-        Com novas <em>soft skills</em>: <strong>empatia</strong> e <strong>inteligência emocional</strong>, descobrimos que juntos somos mais fortes! 
-        É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong></p>
+      <p>Parece que o curso começou ontem e o primeiro projeto já está <strong>PRONTO!</strong> Não foi fácil, deixamos alguns pratos caírem, mas conseguimos. Com novas <em>soft skills</em> em mente, descobrimos que juntos somos mais fortes! É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong>
+      </p>
     </section>
   </aside>
 
