Mudei o estilo do header e do footer

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>Titulo</h1>
+        <h1>Lições aprendidas na Trybe</h1>
     </header>
     <main>
         <img id="minha_foto" src="perfilWhatsapp.jpeg" alt="menino sorrindo">
         <nav id="navegatio">
-            <ol type="1" class="list" id="licoes_aprendidas" >
-                <h3>Lista de coisas aprendidas</h3> 
+            <ol type="1" class="list" id="licoes_aprendidas">
+                <h3>Lista de coisas aprendidas</h3>
                 <li>Git</li>
                 <li>GitHub</li>
                 <li>Unix</li>
@@ -25,7 +25,7 @@
                 <li>CSS</li>
                 <li>Inspect</li>
                 <li>Forms</li>
-            </ol>          
+            </ol>
             <ol type="1" class="list" id="licoes_a_aprender">
                 <h3>Lista de coisas para aprender</h3>
                 <li>JavaScript</li>
@@ -33,7 +33,7 @@
                 <li>Node.js</li>
                 <li>Soft Skills</li>
             </ol>
-        </nav>     
+        </nav>
         <article> ARTIGO COM A TAG ARTICLE AQUI. Vivamus a feugiat libero, sed tincidunt ex. Duis sed diam dolor. Sed in ligula ac neque feugiat maximus consectetur quis felis. Suspendisse potenti. Vestibulum nec erat vel urna vehicula ornare. Praesent at magna congue, convallis diam quis, rhoncus tellus. Proin ut erat pulvinar, imperdiet diam id, mattis felis. Cras et nisl tortor. Nunc ornare a neque ut lacinia. Nunc et congue diam. Fusce rhoncus neque at lectus accumsan nullam sodales.</article>
         <section id="section">
             <aside>
