Req. 3: Concluido. Req. 4: Em andamento.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-        <a href="https://www.w3schools.com/html/html_css.asp" target="_blank">Mais sobre HTML e CSS</a>
+        <nav><a id="about" href="https://mztbtg.github.io/" target="_blank">Sobre mim</a></nav>
     </header>
+    <aside>
+        <img id="minha_foto" src="MinhaFoto.jpg" alt="Minha foto">
+    </aside>
+    <article>
+        <table>
+            <tr>
+                <th>Item 1</th>
+                <th>Item 2</th>
+                <th>Item 3</th>
+            </tr>
+            <tr>
+                <td>Palavras 1</td>
+                <td>Palavras 2</td>
+                <td>Palavras 3</td>
+            </tr>
+            <tr>
+                <td>Palavras 1</td>
+                <td>Palavras 2</td>
+                <td>Palavras 3</td>
+            </tr>
+        </table>
+    </article>
 </body>
 </html>
