Corrigindo alguns erros.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <main id="conteudo">
         <section id="perfil" class="fundos_secoes">
             <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
-            <p><strong>Lições aprendidas e Lições a aprender</strong></p>
+            <p><strong>Nome: </strong>Gabriel Mendonça</p>
+            <p><strong>Idade: </strong>21</p>
             <ol id="licoes_aprendidas">
                 <li>Introdução Unix e Shell</li>
                 <li>BASH</li>
@@ -60,50 +61,25 @@
         </section>
 
         <article id="artigo" class="fundos_secoes exceto_secoes">
-            <!--https://gabrielgarciamendonca.github.io/   |   Meu portfólio foi utilizado para buscar alguns textos acerca dos locais no qual eu estudei.-->
-            <h2>Historico</h2>
-            <section class="cartao_apresentacao">
-                <h3>2019</h3>
-                <p><strong>Escola: </strong>IFSP</p>
-                <p><strong>Curso: </strong>Análise e Desenvolvimento de Sistemas.</p>
-                <p><strong>Conclusão: </strong>2022</p>
-                <p><strong>Situação: </strong>Trancado</p>
-                <p><strong>Descrição: </strong>O Instituto Federal de Educação, ciência e tecnologia de São Paulo é um
-                    instituto
-                    focado e perfeito, e além do mais, em constante contato com a tecnologia de ponta.</p>
-            </section>
-            <section class="cartao_apresentacao">
-                <h3>2020</h3>
-                <p><strong>Escola: </strong>Trybe</p>
-                <p><strong>Curso: </strong>Desenvolvedor de Software</p>
-                <p><strong>Conclusão: </strong>2021</p>
-                <p><strong>Situação: </strong>Cursando</p>
-                <p><strong>Descrição: </strong>A Trybe é uma escola para pessoas que querem construir uma carreira de
-                    sucesso em tecnologia e que se compromete
-                    integralmente com seus estudantes, pois as pessoas só pagam quando conseguirem um bom trabalho.</p>
-            </section>
-
+            <p>
+                Neste curto periodo de aprendizado na trybe, aprendi muito, nunca pensaria que em menos de 2 semanas eu
+                estivesse criando já sites com html, css, com uma ótima semantica, e uma gama de ferramentas que nem
+                sequer eu
+                sabia que existia. E ainda tem muito mais pela frente, uma infinidade de ferramentas ainda estão por
+                vir. <a class="style_link" href="https://www.betrybe.com/formacao" target="_Blank">Veja...</a>
+            </p>
         </article>
-        <section id="aside_breve_passagem" class="fundos_secoes exceto_secoes">
-            <aside>
-                <h3>Breve passagem...</h3>
-                <p><strong>Quando?</strong> Foi na época que estava fazendo faculdade.</p>
-                <p>Tive que desenvolver um wallet do 0, sem saber nem sequer o que era orientação a objetos e muito
-                    menos um banco de dados relacional. Mas corri muito, pesquisei, estudei e consegui.</p>
-            </aside>
-        </section>
-        <section>
-            <footer id="rodape">
-                <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
-                <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos"
-                        alt="logo do linkedin"
-                        src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
-                <a href="https://github.com/gabrielgarciamendonca" target="_Blank"><img class="links_logos"
-                        alt="logo do github"
-                        src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" /></a>
-            </footer>
-        </section>
+        <aside id="aside_breve_passagem" class="fundos_secoes exceto_secoes">
+            <p>Tive que desenvolver um wallet do 0, sem saber nem sequer o que era orientação a objetos e muito
+                menos um banco de dados relacional. Mas corri muito, pesquisei, estudei e consegui.</p>
+        </aside>
     </main>
+    <footer id="rodape">
+        <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos" alt="logo do linkedin"
+                src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
+        <a href="https://github.com/gabrielgarciamendonca" target="_Blank"><img class="links_logos" alt="logo do github"
+                src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" /></a>
+    </footer>
 </body>
 
 </html>
