Formatando o arquivo de acordo com o code climate

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <article class="lado-esquerdo">
                 <p>
-                    A formação Trybe é 100% online e conta com aulas ao vivo, onde você com sua turma diariamente. Você pode fazer toda sua de qualquer local, desde que tenha disponibilidade de a sexta, de 14h às 20h, horário de Brasília, e conquiste a no processo seletivo da Trybe. Duração aproximada de 12 com carga horária de 1.500 horas. Na Trybe você vai adquirir o técnico e as soft skills necessárias para construir uma de sucesso em web e conecte se com o de trabalho.
+                    A formação Trybe é 100% online e conta com aulas ao vivo, onde você com sua turma diariamente. Você pode fazer toda sua de qualquer local, desde que tenha disponibilidade de a sexta, de 14h às 20h, horário de Brasília, e conquiste a no processo seletivo da Trybe. Duração aproximada de 12 com carga horária de 1.500 horas. Na Trybe você vai adquirir o técnico e as soft skills para construir uma de sucesso em web e conecte se com o de trabalho.
                 </p>
             </article>
 
@@ -95,5 +95,4 @@
     </div>
 
 </body>
-
 </html>
