Parte 6 do projeto

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <title>Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -36,5 +36,9 @@
         <li>Back-end</li>
         <li>NodeJS</li>
       </ul>
+      <br>
+      <footer id="rodape">
+        <h4>Página criada por Márcio Fujita</h4>
+      </footer>
   </body>
 </html>
