--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Osvaldo Borges Campos Neto</h1>
+        <nav id="navegador">
+            <ul>
+                <li><a href="#section_list">Licoes</a></li>
+                <li><a href="#section_article">Artigos</a></li>
+            </ul>
+        </nav>
     </header>
     <figure class="fotos">
         <img src="../images/me.jpg" alt="Minha Foto" id="minha_foto">
     </figure>
     <section id="section_list">
+        <h2>Licoes</h2>
         <div id="listas">
-            <h2>Licoes</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Git</li>
@@ -44,15 +50,17 @@
     </section>
     <section id="section_article">
         <h2>Artigos</h2>
-        <article id="artigo">
+        <article class="lado-esquerdo">
+            <h3>Artigo Esquerdo</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum erat a lectus lobortis scelerisque. Donec rutrum urna volutpat, dignissim nisl eu, fringilla mauris. Vestibulum libero tellus, lacinia eu nisl vel, eleifend ornare nulla. Aenean sed lacus ac lectus pulvinar interdum. Praesent id metus commodo, suscipit mauris ut, placerat ipsum. Aliquam erat volutpat. Sed a elit tempor, sollicitudin lacus eu, venenatis libero. In laoreet nisl id orci interdum, et pretium est scelerisque. Etiam fringilla luctus sem. Quisque vel commodo odio.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut consequat massa. Duis ultrices in tortor ac laoreet. Maecenas quis sapien felis. Donec erat ligula, sollicitudin tristique ipsum sit amet, interdum mollis augue. Duis ac lectus in velit pretium lobortis sit amet ac lectus. Aliquam erat volutpat. Praesent quis nisi a urna blandit placerat. Cras fringilla lacus a ante vehicula auctor. Maecenas porta lobortis nunc pretium pulvinar. Maecenas in laoreet risus. Duis sit amet mauris.
             </p>
         </article>
-        <aside id="barra_lateral">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent semper, tellus quis accumsan pulvinar, mi odio commodo libero, non consequat risus purus quis augue. Vestibulum vel blandit nulla. Donec fringilla nibh mauris, quis pharetra elit luctus gravida. Vestibulum viverra.</p>
-        </aside>
-    </section>   
+        <article class="lado-direito">
+            <h3>Artigo Direito</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut consequat massa. Duis ultrices in tortor ac laoreet. Maecenas quis sapien felis. Donec erat ligula, sollicitudin tristique ipsum sit amet, interdum mollis augue. Duis ac lectus in velit pretium lobortis sit amet ac lectus. Aliquam erat volutpat. Praesent quis nisi a urna blandit placerat. Cras fringilla lacus a ante vehicula auctor. Maecenas porta lobortis nunc pretium pulvinar. Maecenas in laoreet risus. Duis sit amet mauris.</p>
+        </article>
+    </section>  
     <footer id="rodape">
         <div>
             <a href="https://github.com/osvaldoBorgesCNeto" target="_blank">GitHub</a>
