--- a/index.html
+++ b/index.html
@@ -15,30 +15,33 @@
     <main>
         <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="minha_foto">
         <a href="https://www.linkedin.com/in/pedro-henrique-497b411b6/" target="_blank" id="linkedin">Linkedin</a>
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Empatia</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
+        <aside id="side-list">
+            <h3 id="learned-learning">Aprendizados e A desenvolver</h3>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </aside>
     </main>
     <footer id="rodape">
         <p>Todos os direitos reservados, Pedro</p>
