--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lições Aprendidas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -43,8 +43,7 @@
     <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
     minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank, Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
     As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
-    desafios e superando-os com ajuda do time Trybe.</p>
-        
+    desafios e superando-os com ajuda do time Trybe.</p>        
 </article>
 
 <aside>
