Adiciona dynamic pseudo class hover

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <main>
     <section>
         <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado" width=20%>
-        <h2><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank">Ana Luiza Machado Salgado</a></h2>
+        <h2>Ana Luiza Machado Salgado</h2>
     </section>
 
     <section>
@@ -72,7 +72,7 @@
 
 <footer id="rodape">
     <h4>Me encontre aqui:</h4>
-    <p><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank">LinkedIn</a></p>
-    <p><a href="https://github.com/analuizams" target="_blank">GitHub</a></p>
+    <a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=30px></a>
+    <a href="https://github.com/analuizams" target="_blank"><img src="github.png" alt="Logo do GitHub" width=30px></a>
 </footer>
 </body>
