--- a/index.html
+++ b/index.html
@@ -25,13 +25,29 @@
                 <img id="minha_foto" src="images/me.jpg" alt="minha foto">
                 <h1> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
             </section>
+            <section>
+                <table id="table-info">
+                    <tr>
+                        <th>Nome</th>
+                        <th>Marcelo Campos</th>
+                    </tr>
+                    <tr>
+                        <th>Idade</th>
+                        <th>28 anos</th>
+                    </tr>
+                    <tr>
+                        <th>Turma</th>
+                        <th>09</th>
+                    </tr>
+                </table>
+            </section>
         </div>
         <div class="article-box">
-            <article id="article1">
+            <article class="lado-esquerdo">
                 <p>Estou a poucas semanas na Trybe, mas sinto que meu aprendizado tem sido tão abrangente quanto meses de estudo. A metodologia de aprendizado ativa tem sido árdua e intensa, tem me deixado estressado e muito cansado, porém com o passar dos dias, me comparando com o Marcelo la dos welcome days, já vejo uma enorme diferença e me sinto muito orgulhoso de fazer parte da Trybe.</p>
             </article>
             
-            <section id="article2">
+            <section class="lado-direito">
                 <aside>
                     <p>O nosso primeiro momento soft skills sobre autoconhecimento foi muito importante pra mim, me fez enxergar gatilhos e caminhos para amenizar problemas que me perseguem desde a minha entrada no mercado de trabalho.</p>
                 </aside>
