teste de article

--- a/index.html
+++ b/index.html
@@ -18,21 +18,20 @@
                     <li><a href="#licoes_2">Lições a aprender</a></li>
                     <li><a href="#sobre_aprendizado">Sobre meu aprendizado</a></li>
                     <li><a href="#breve">Uma breve passagem</a></li>
-                    <li><a class="extra" href="#referencias">Referências</a></li>
-                    <li><a class="extra" href="#contact">Contact</a></li>
+                    <li><a href="#referencias">Referências</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <div class="lado-esquerdo">
             <div>
-                <img id="minha_foto" alt="foto do Tiago" src="https://avatars1.githubusercontent.com/u/68355072?s=460&u=b51db7ba3f1d958425b778c6b9caa434b4189db8&v=4">
+                <img id="minha_foto" alt="Minha foto" src="https://avatars1.githubusercontent.com/u/68355072?s=460&u=b51db7ba3f1d958425b778c6b9caa434b4189db8&v=4">
             </div>
             <div>
                 <h2 id="licoes_1">Lições aprendidas</h2>
                 <ol id="licoes_aprendidas">
                     <li>Fundamentos de Desenvolvimento WEB</li>
-                    <li>UNIX</li>
-                    <li>SHELL</li>
+                    <li>UNIX & SHELL</li>
                     <li>BASH</li>
                     <li>Git</li>
                     <li>GitHub</li>
@@ -40,6 +39,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>HTML Semântico</li>
+                    <li>Inteligência Emocional</li>
                 </ol>
             </div>
             <div>
@@ -65,13 +65,13 @@
                     Sobre o meu aprendizado
                 </h2>
                 <p>
-                    bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto
+                    Aprendii muita coisa nessas quase três semanas que estou estudando aqui na trybe, muitas delas relacionadas ao conteúdo do curso, mas o que surpreendeu mesmo foi o quanto que estou aprendendo sobre ferramentas que vou usar no dia a dia, as soft-skills.
                 </p>
                 <aside>
-                    <h2 id="breve">um pedaço de texto que não precisa ser realmente muito grande nem nada</h2>
+                    <h2 id="breve">"...me ajudaram a melhorar meus relacionamentos."</h2>
                 </aside>
                 <p>
-                    mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....
+                    A Introdução do tema Inteligencia Emocional e Empatia me ajudaram a melhorar meus relacionamentos. 
                 </p>
             </article>
         </section>
