Removendo underline a mais no target

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer id="rodape">
-        <p>Desenvolvido por <a href="https://github.com/Diego-Vini" target="__blank">@Diego-Vini</a> <strong>|</strong> todos os direitos reservados.</p>
+        <p>Desenvolvido por <a href="https://github.com/Diego-Vini" target="_blank">@Diego-Vini</a> <strong>|</strong> todos os direitos reservados.</p>
     </footer>
 
 </body>
