--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <head id="cabecalho">
+  <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
-    </head>
+    </header>
 
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
 
