Rework Licoes Aprendidas & + Assets

--- a/index.html
+++ b/index.html
@@ -11,22 +11,97 @@
       <h1 id="titulo">Lições Aprendidas</h1>
     </header>
     <main>
-        <img id="minha_foto" src="assets/Foto Terno.jpeg" alt="Minha foto usando terno">
-    </main>
-    <section id="aprendidas">
+      <img
+        id="minha_foto"
+        src="assets/Foto Terno.jpeg"
+        alt="Minha foto usando terno"
+      />
+
+      <section id="aprendidas">
         <h2>Lições Aprendidas</h2>
         <ol id="licoes_aprendidas">
-            <li>Zoom</li>
-            <li>Slack</li>
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>w3schools</li>
-            <li>HTML</li>
-            <li>CSS</li>         
-            <li>Inspect</li>
-            <li>HTML Semântico</li>
+          <li>
+            Zoom
+            <img
+              class="icon"
+              src="assets/zoom.jpeg"
+              alt="ícone do zoom"
+            />
+          </li>
+          <li>
+            Slack
+            <img
+              class="icon"
+              src="assets/slack.png"
+              alt="ícone do slack"
+            />
+          </li>
+          <li>
+            Unix
+            <img
+              class="icon"
+              src="assets/linux.jpeg"
+              alt="ícone do linux"
+            />
+          </li>
+          <li>
+            Internet
+            <img
+              class="icon"
+              src="assets/internet.png"
+              alt="ícone da internet"
+            />
+          </li>
+          <li>
+            Git
+            <img
+              class="icon"
+              src="assets/git.png"
+              alt="ícone do git"
+            />
+          </li>
+          <li>
+            GitHub
+            <img
+              class="icon"
+              src="assets/github.png"
+              alt="ícone do github"
+            />
+          </li>
+          <li>
+            w3schools
+            <img
+              class="icon"
+              src="assets/w3schools.jpeg"
+              alt="ícone do w3schools"
+            />
+          </li>
+          <li>
+            HTML
+            <img
+              class="icon"
+              src="assets/html.png"
+              alt="ícone do html"
+            />
+          </li>
+          <li>
+            CSS
+            <img
+              class="icon"
+              src="assets/css.jpeg"
+              alt="ícone do css"
+            />
+          </li>
+          <li>
+            Inspect
+            <img
+              class="icon"
+              src="assets/inspect.png"
+              alt="ícone do inspect"
+            />
+          </li>
         </ol>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
