--- a/index.html
+++ b/index.html
@@ -9,66 +9,11 @@
 </head>
 <body>
     <header id="cabecalho">
-        <div class="head-container">
-            <h1 id="titulo">Lições aprendidas | Trybe</h1>
-            <nav class="menu">
-                <a target="_blank" href="#header">Home</a>
-                <a target="_blank" href="https://google.com">Google</a>
-            </nav>
-        </div>
+        <h1 id="titulo">Projeto desenvolvimento Trybe</h1>
+        <nav class="navegacao">
+            <a href="#header">Home</a>
+            <a target="_blank" href="https://linkedin.com/in/pedrotoselli">Linkedin</a>
+        </nav>
     </header>
-    <main>
-        <div class="container">
-            <div class="img-wrapper">
-                <img id="minha_foto" src="imagens/toselli.jpg" width="230px" alt="Uma foto de Pedro Toselli">
-            </div>
-                <div class="main-name">
-                    <h3>Pedro Toselli <br> Estudante de desenvolvimento web | Trybe</h3>
-                </div>
-                <div class="main-description">
-                    <p>Sou estudante de desenvolvimento web na Trybe, gosto muito da área de desenvolvimento e amo "quebrar a cabeça" com novos desafios. <br>Busco sempre me desenvolver tanto como pessoa quanto como profissional, levando em consideração minhas hard-skills e soft-skills.</p>
-                </div>
-        </div>
-    </main>
-    <section>
-        <div class="sec-container">
-            <ol id="licoes_aprendidas">
-                <li>Inteligência emocional</li>
-                <li>Soft-skills</li>
-                <li>Estruturas HTML</li>
-                <li>Semântica HTML</li>
-                <li>Estruturas CSS</li>
-                <li>Comandos do terminal</li>
-                <li>Como usar Git</li>
-                <li>Github</li>
-                <li>VSCode</li>
-                <li>Internet e como ela funciona</li>
-            </ol>
-            <ul id="licoes_a_aprender">
-                <li>Python</li>
-                <li>JavaScript</li>
-                <li>Node JS</li>
-                <li>Segurança de dados</li>
-                <li>Python</li>
-                <li>Desenvolvimento de jogos</li>
-                <li>Desenvolvimento em C</li>
-                <li>C++</li>
-                <li>web design</li>
-                <li>como fazer miojo</li>
-            </ul>
-        </div>
-        <aside>
-            <table>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-            </table>
-        </aside>
-    </section>
-
-    <footer id="rodape">
-        <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
-        <a target="_blank" href="https://linkedin.com/in/pedrotoselli"><i class="fab fa-linkedin"></i></a>
-    </footer>
 </body>
 </html>
