--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Aprendizados em 2 semanas de Trybe</h1>
     </header>
-    
+    <img id="minha_foto" src="foto_carol_bitencourt.jpg" alt="Foto da Carol Bitencourt.">
+
 </body>
 </html>
