--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     </header>
     <main>
       <img id="minha_foto" src="profile-img.jpg" alt="Foto de Renato Feitosa">
+      <h2>As dez lições que aprendi (entre tantas outras)</h2>
+      <ol>
+        <li>Preciso desvendar como explorar o <em>LinkedIn</em> para conseguir mais oportunidades;</li>
+        <li>O <em>Slack</em> é um ótimo ambiente para a troca de conhecimentos e manter contato em equipes;</li>
+        <li>Interações respeitosas são um incentivo à aprendizagem;</li>
+        <li>A utilidade e como fazer <em>branches</em> no Git;</li>
+        <li>Realizar <em>pull requests</em> e <em>merges</em> no GitHub, funções essenciais para desenvolvimento em equipe;</li>
+        <li><em>Soft skills</em> é usar da nossa própria humanidade para agregar valor ao nosso trabalho;</li>
+        <li>Entender as hierarquias do CSS economiza horas de tentativas e erros e permite códigos mais elegantes;</li>
+        <li>HTML Semântico é essencial para acessibilidade na web;</li>
+        <li>Aprender em grupo é um grande estímulo para superar a saturação estagnante do auto-aprendizado;</li>
+        <li>Na Trybe, o pertencimento a um coletivo é realidade e não apenas <em>marketing</em>.</li>
+      </ol>
     </main>
   </body>
 </html>
