--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     </header>
     <aside>
         <img id="minha_foto" src="MinhaFoto.jpg" alt="Minha foto">
-    </aside>
-    <article>
         <table>
             <tr>
                 <th>Item 1</th>
@@ -32,6 +30,20 @@
                 <td>Palavras 3</td>
             </tr>
         </table>
+    </aside>
+    <article>
+        <ol id="licoes_aprendida">
+            <li>Linux</li>
+            <li>Bash</li>
+            <li>Git</li>
+            <li>gitHub</li>
+            <li>Internet Básica</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>HTML semântico</li>
+            <li>Inspect</li>
+            <li>Stack Overflow</li>
+        </ol>
     </article>
 </body>
 </html>
