ajustes em artigo e aside

--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
             </section>
             
             <article>
-                    Lorem ipsum at dolor tempor vel lacinia malesuada platea odio orci, etiam pretium massa sapien etiam eleifend potenti egestas pellentesque eros, integer augue ad blandit fringilla cras elit proin potenti. 
-                    per accumsan pretium sed mollis urna purus nisl ipsum quisque pharetra donec egestas, semper pellentesque taciti pretium tortor nec viverra nulla sagittis quis a. 
-                    fames torquent suscipit volutpat accumsan velit vehicula aenean sagittis, imperdiet et ipsum mi et tortor odio, fames adipiscing purus nunc leo cras aenean. 
-                    dolor ad nisl dictumst leo justo amet placerat tempor, pharetra conubia turpis eget tellus fames habitant, ornare morbi tempus class lectus bibendum eleifend. 
+                    Minha jornada na Trybe começou dia 9 de Novembro de 2020 e de lá pra cá aprendi muito. Muito mesmo! Os conteudos estudados até agora foram fundamentos de desenvolvimento web, como funciona a internet, Unix, Bash, Shell, HTML, CSS e HTML Semântico. Fora todos os conteudos que fazem parte das <em>Hard Skills</em>, também fomos iniciados nos estudos das <em>Soft Skills</em>, aprendendo um pouco sobre inteligência emocional. 
             </article>
             <aside>
-                Lorem ipsum donec egestas etiam id elementum, morbi ante in eros convallis erat pharetra, elementum mi quisque nulla eros.facilisis integer interdum odio dapibus etiam fermentum tortor nulla cursus vehicula egestas, libero justo ut primis ante at donec hendrerit dui pellentesque. fringilla facilisis id vivamus dui sem, purus nisi integer.
+                Apesar do pouco tempo de curso, já aprendi um pouco sobre Unix, Bash, Softskills, HTML, CSS e HTML Semântico. Espero nos próximos meses aperfeiçoar os conhecimento que já adquiri e aprender muitos outros!!! #gotrybers
             </aside>
       </main>
       <footer id="rodape">
