--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     não ficamos com dúvidas.
 </aside>
 
-
+<nav id="nav"> Adicionem-me no Linkedin: <a href="https://www.linkedin.com/in/kamila-ribeiro-089778152/" target="_blank"></a></nav>
 <footer id="rodape">Sigam-me no GitHub: <a href="https://github.com/Kamilavrhcp" target="_blank">@Kamilavrhcp</a> </footer>
 </body>
 </html>
