--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <img id="minha_foto" src="profile-img.jpg" alt="Foto de Renato Feitosa">
       <h2>As dez lições que aprendi (entre tantas outras)</h2>
-      <ol>
+      <ol id="licoes_aprendidas">
         <li>Preciso desvendar como explorar o <em>LinkedIn</em> para conseguir mais oportunidades;</li>
         <li>O <em>Slack</em> é um ótimo ambiente para a troca de conhecimentos e manter contato em equipes;</li>
         <li>Interações respeitosas são um incentivo à aprendizagem;</li>
